--- a/templates/chat.html
+++ b/templates/chat.html
@@ -29,12 +29,12 @@ block content %}
 
   <div class="fixed-bottom">
     <div class="container">
-      <form id="chat-form">
+      <form class="" id="chat-form">
         <div class="input-group mb-3">
           <input
             id="user-input"
             type="text"
-            class="form-control"
+            class="form-control shadow"
             placeholder="start chatting with your tutor"
             aria-label="start chatting with your tutor"
             aria-describedby="submit-button"
