--- a/templates/base.html
+++ b/templates/base.html
@@ -18,18 +18,24 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/superhero/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/minty/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="/static/styles.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@200;400;700&display=swap"
+      rel="stylesheet"
+    />
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/styles.css" />
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body class="pt-5">
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-secondary">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid d-flex align-items-center">
-          <a class="navbar-brand" href="#">ChatMentor</a>
+          <b><a class="navbar-brand" href="/">ChatTutor</a></b>
 
           <button
             class="navbar-toggler"
@@ -83,7 +89,5 @@
 
     <div class="container mt-5">{% block content %}{% endblock %}</div>
     <script src="https://cdn.jsdelivr.net/npm/axios@0.24.0/dist/axios.min.js"></script>
-    <!-- <script src="/static/app.js"></script> -->
-    <!-- <script src="/static/delete.js"></script> -->
   </body>
 </html>
