--- a/templates/chat_list.html
+++ b/templates/chat_list.html
@@ -12,7 +12,7 @@ endblock %} {% block content %}
         <form id="language-form" class="mb-3">
           <div class="form-group">
             <label for="language-select">Select Language:</label>
-            <select class="form-control" id="language-select">
+            <select class="shadow-sm form-control" id="language-select">
               <option value="">All Languages</option>
               <option value="spanish">Spanish</option>
               <option value="french">French</option>
@@ -22,7 +22,7 @@ endblock %} {% block content %}
           </div>
         </form>
         <div id="sortButtons">
-          <button id="sortAscending" class="btn btn-primary">
+          <button id="sortAscending" class="shadow-sm btn btn-primary">
             Toggle Oldest to Newest Chats
           </button>
         </div>
@@ -31,14 +31,14 @@ endblock %} {% block content %}
       <ul class="list-group" id="chat-list">
         {% for chat in chats %}
         <li
-          class="list-group-item list-group-item-action mb-2"
+          class="shadow-sm list-group-item list-group-item-action mb-2"
           data-chat-language="{{ chat.language }}"
           data-chat-id="{{ chat.id }}"
           data-date-created="{{ chat.created_at}}"
         >
           <div class="d-flex justify-content-between align-items-center">
             <a
-              class="no-underline white"
+              class="no-underline"
               href="{{ url_for('chat_page', chat_id=chat.id) }}"
             >
               <span>{{ chat.chat_title }}</span>
@@ -55,14 +55,14 @@ endblock %} {% block content %}
                 href="{{ url_for('edit', chat_id=chat.id) }}"
                 class="custom-button"
               >
-                <i class="fa-solid fa-pen-to-square"></i>
+                <i class="text-primary fa-solid fa-pen-to-square"></i>
               </a>
               <form
                 method="POST"
                 action="{{ url_for('delete_chat', chat_id=chat.id) }}"
               >
                 <button id="delete-button" type="submit" class="custom-button">
-                  <i class="fa-solid fa-trash"></i>
+                  <i class="text-primary fa-solid fa-trash"></i>
                 </button>
               </form>
             </div>
