--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,7 +5,7 @@ block content %}
   <div class="container">
     <div class="row">
       <div class="col-lg-8 offset-lg-2">
-        <h4 class="text-center text-light mb-3">{{ chat_title }}</h4>
+        <h4 class="text-center mb-3">{{ chat_title }}</h4>
         <ul
           id="message-group"
           data-chat-id="{{ chat_id }}"
