--- a/templates/index.html
+++ b/templates/index.html
@@ -55,16 +55,13 @@ content %} {% for msg in get_flashed_messages() %}
         <h5>Immerse Yourself in Lifelike Conversations</h5>
         <p class="text-body-secondary navy">
           Practice your language skills with realistic and dynamic conversation
-          scenarios powered by the OpenAI API. Engage in authentic dialogues
-          that replicate real-life interactions to enhance your language
-          proficiency.
+          scenarios powered by the OpenAI API.
         </p>
       </div>
 
       <div class="col-md-4">
         <h5>Save and Review for Personalized Learning</h5>
         <p class="text-body-secondary">
-          Capture and store your conversations for future reference and review.
           Access your saved dialogues to analyze your progress, identify areas
           for improvement, and tailor your language learning journey to suit
           your needs.
@@ -75,9 +72,7 @@ content %} {% for msg in get_flashed_messages() %}
         <h5>A Tailored Language Learning Experience</h5>
         <p class="text-body-secondary">
           Customize your practice sessions to focus on specific topics,
-          vocabulary, or language proficiency levels. Whether you're a beginner
-          or an advanced learner, our app adapts to your skill level and
-          provides targeted exercises to help you excel.
+          vocabulary, or language proficiency levels.
         </p>
       </div>
     </div>
